[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Bewohner/EventManager.gd" type="Script" id=1]

[node name="EventManager" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="EventGeneratorTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="EventGeneratorTimer" to="." method="_on_EventGeneratorTimer_timeout"]
